# gitman

./: .appveyor.yml  .gdm.yml  .gitignore  .isort.cfg  .mypy.ini  .noserc  .pep257  .pep8rc  .pre-commit  .project  .pycodestyle.ini  .pydevproject  .pylint.ini  .pylintrc  .scrutinizer.yml  .tool-versions  .travis.yml  .verchew  .verchew.ini  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  README.md  gitman.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  scent.py  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml
docs/: demo.cast  index.md  requirements.txt
docs/extras/: bundled-application.md  git-svn-bridge.md  self-contained-gitman.md
docs/interfaces/: api.md  cli.md  models.md  plugin.md
docs/setup/: configuration.md  environment.md  git-svn.md  git.md
docs/use-cases/: branch-tracking.md  branches.md  build-integration.md  default-groups.md  git-svn.md  linked-features.md  multiple-copies.md  multiple-links.md  self-contained-gitman.md  sparse-checkouts.md  submodules.md
gdm/: __init__.py  __main__.py  cli.py  commands.py  common.py  config.py  exceptions.py  git.py  plugin.py  settings.py  shell.py  source.py  system.py  types.py
gdm/test/: __init__.py  conftest.py  test_all.py  test_cli.py  test_commands.py  test_common.py  test_config.py  test_gdm.py  test_git.py  test_plugin.py  test_shell.py  test_sources.py  test_system.py
gdm/test/files/: gdm-custom.yml  gdm-default.yml  gdm.yml
gitman/: __init__.py  __main__.py  cli.py  commands.py  common.py  config.py  decorators.py  exceptions.py  git.py  hook-gitman.py  plugin.py  settings.py  shell.py  source.py  system.py
gitman/models/: __init__.py  config.py  group.py  source.py
gitman/test/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_config.py  test_git.py  test_models_config.py  test_models_source.py  test_plugin.py  test_shell.py  test_sources.py  test_system.py
gitman/test/files/: gdm-custom.yml  gdm-default.yml  gitman.yml
gitman/tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_common.py  test_git.py  test_models_config.py  test_models_group.py  test_models_source.py  test_plugin.py  test_shell.py  test_system.py  utils.py
gitman/tests/files/: gdm-custom.yml  gdm-default.yml  gitman.yml
gitman/tests/files/subdir/: gitman.yml
gitman/tests/files/subdir/subsubdir/: gitman.yml
gitman/tests/files/subdir/subsubdir/skip/subsubsubsubdir/: gitman.yml
gitman/tests/symlink_test/: gitman.yml
requirements/: ci.txt  dev.txt
tests/: __init__.py  conftest.py  test_all.py  test_api.py  test_cli.py  test_main.py  utilities.py
tests/files/: gdm.yml
