[tool.poetry]

name = "gitman"
version = "3.5.1"
description = "A language-agnostic dependency manager using Git."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/gitman"
documentation = "https://gitman.readthedocs.io"
repository = "https://github.com/jacebrowning/gitman"

keywords = [
    "git",
    "version control",
    "build systems",
    "dependency management",
    "submodules",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Software Distribution",
]

[tool.poetry.dependencies]

python = "^3.8"

datafiles = "^2.2"
minilog = "^2.3"
universal-startfile = "~0.2"

[tool.poetry.dev-dependencies]

# Formatters
black = "^22.1"
isort = "^5.10"

# Linters
mypy = "^1.3"
pydocstyle = "*"
pylint = "~2.15"
types-freezegun = "*"
types-setuptools = "*"

# Testing
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-describe = "^2.2"
pytest-expecter = "^3.0"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^6.1"

# Documentation
mkdocs = "^1.2.3"
mkdocstrings = "^0.18.1"
pygments = "^2.15.0"
jinja2 = "~3.1.4"

# Tooling
pyinstaller = "^4.0"
sniffer = "*"
macfsevents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
rope = "^0.14"

[tool.poetry.scripts]

gitman = "gitman.cli:main"
git-deps = "gitman.plugin:main"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = "datafiles.plugins:mypy"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov=gitman
--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = ["integration"]

[build-system]

requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
